--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>cloud-demo</title>
+	<style>
+		body,html{
+		width: 100%;
+    height: 100%;}
+	</style>
   </head>
-  <body>
+  <body style="margin:0 0;">
     <noscript>
       <strong>We're sorry but cloud-demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
