--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 		width: 100%;
     height: 100%;}
 	</style>
+	<script src="http://api.tianditu.gov.cn/api?v=4.0&tk=e29f6347c0edb830d8d8b61cae7d1e6c" type="text/javascript"></script>
   </head>
   <body style="margin:0 0;">
     <noscript>
