--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 	 <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
    integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
    crossorigin=""></script>
+   <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=EcefOvENCkLp9bGdVeai7YDa9o8nPNlr"></script>
   </head>
   <body style="margin:0 0;">
     <noscript>
